interfaces/Glitter/templates/static/stylesheets/glitter.css
/* ... */
.history-failed-download:hover .retry-button .glyphicon:before,
.retry-button:hover .glyphicon:before {
    content: " \e030 ";
    color: red !important;
}

.history-table tr td {
    vertical-align: top !important;
    cursor: default;
}

.history-table tr td.status,
.history-table tr td.history-completedon {
    color: #888;
    font-size: 12px;
    padding-right: 0 !important;
    vertical-align: middle !important;
    cursor: pointer;
}

.history-table .status-header {
    width: 35%;
}

.history-table .delete .dropdown {
    position: inherit;
}

.history-table .delete .dropdown-menu {
    top: -100000px;
    left: auto;
    right: 20px;
    text-align: left;
    margin-top: 4px;
    padding: 10px;
    width: 700px;
}

.history-table .delete .open .dropdown-menu {
    top: auto;
}

.history-status-table .col-sm-2 {
    font-weight: bold;
    text-align: right;
    padding-right: 0;
}

.history-status-table .col-sm-10 {
    word-break: break-word;
}

.history-status-table a {
    font-weight: bold;
}

.history-status-hidden {
    display: none;
}

.history-ratings {
    display: inline-block;
}

.history-ratings.open a {
    opacity: 1;
}

.history-ratings .name-ratings {
    float: none !important;
}

.history-ratings-menu {
    width: 300px;
    padding: 10px;
    margin-top: 4px !important;
}

.history-ratings-menu .divider {
    background-color: black;
}

.history-ratings-menu label {
    margin-right: 12px;
    font-weight: normal;
}

.history-ratings-basic input[type="radio"] {
    display: none;
}

.history-ratings-basic input[type="radio"]+span {
    opacity: 0.6;
    cursor: pointer;
    font-size: 1.3em;
    font-weight: bold;
    top: 3px;
    margin-left: 3px;
}

.history-ratings-basic input[type="radio"]+span+span {
    opacity: 0.3;
}

.history-ratings-basic input[type="radio"]:checked+span,
.history-ratings-basic input[type="radio"]:checked+span+span {
    opacity: 1;
}

.history-ratings-basic .history-ratings-spacer {
    margin-left: 10px;
}

.history-ratings-basic select {
    margin-left: 3px;
    background-color: transparent;
    border: 1px solid #ccc;
}

.history-ratings-basic select:disabled {
    background-color: #F5F5F5;
}

.history-ratings-report label {
    width: 100%;
}

.history-ratings-report .ratings-report-hidden {
    display: none;
}

.history-ratings-report input[type="radio"]:checked+input,
.history-ratings-report input[type="radio"]:checked+select {
    display: block;
}

#history-options {
    margin-top: 0;
    margin-left: 10px;
    padding: 0;
    padding-left: 4px;
}

#history-options .hover-button {
    padding: 7px 8px 7px 8px;
    line-height: 1.428571429;
    display: inline-block;
}

#history-options .hover-button span {
    top: 2px;
}

.history-info {
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 5px;
}

.history-info>span {
    margin-left: 8px;
}

.history-info>span:nth-child(2) {
    margin-left: 2px;
}

.search-box {
    float: left;
    margin-bottom: 10px;
    margin-right: 5px;
}

.search-box input {
    width: 130px !important;
    transition: width 0.2s ease-out !important;
    border: 1px solid #dddddd;
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
}

.search-box input:focus,
.search-box input:valid {
    width: 250px !important;
    border-color: #ccc !important;
}

.search-box input::-ms-clear {
    display: none;
}

.search-box a {
    float: right;
    position: absolute;
    display: block;
    top: 0;
    right: 0;
    padding: 8px 10px 3px 0px;
    opacity: 0.7;
    z-index: 999;
}

.search-box a span {
    cursor: pointer;
}

.history-options-show-failed,
.search-box input:focus+span {
    opacity: 1 !important;
}

.history-options-show-failed {
    color:  red !important;
}

.processing-download {
    width: 16px;
    height: 18px;
    text-align: center;
    font-size: 8px;
    margin-top: 1px;
}

.processing-download > div {
    background-color: #333;
    height: 100%;
    width: 2px;
    float: left;
    margin-right: 2px;
    animation: stretchdelay 1.2s infinite ease-in-out;
}

.processing-download .loader-bar-two {
    animation-delay: -1.1s;
}

.processing-download .loader-bar-three {
    animation-delay: -1.0s;
}

.processing-download .loader-bar-four {
    animation-delay: -0.9s;
    margin-right: 0;
}

@-webkit-keyframes stretchdelay {
    0%,40%,100% {
        -webkit-transform: scaleY(0.4);
    }

    20% {
        -webkit-transform: scaleY(1.0);
    }
}

@keyframes stretchdelay {
    0%, 40%, 100% {
        transform: scaleY(0.4);
    }

    20% {
        transform: scaleY(1.0);
    }
}

/***
    Modals
***/

/* OPTIONS MODAL */

#modal-options .tab-content {
    transition: all 0.3s !important;
    min-height: 200px;
}

#modal-options .form-group {
    margin-bottom: 5px;
}

#modal-options fieldset {
    margin-bottom: 1em;
}

#modal-options .nav-tabs .label {
    display: inline-block;
    vertical-align: middle;
}

#modal-options .options-switch {
    text-align: center;
    border-bottom: 1px solid #F0F0F0;
    padding-bottom: 3px;
    margin-bottom: 13px;
}

#modal-options .form-group+.options-switch {
    margin-bottom: 13px;
    margin-top: 8px;
    clear: both;
}

#modal-options .options-switch label,
#modal-options #options-orphans .remove-all-orphaned {
    font-size: 1.4rem;
    margin-top: 5px;
    margin-bottom: 10px;
    font-weight: bold;
    cursor: pointer;
    color: black;
}

#modal-options .options-switch a,
#modal-options #options-orphans .remove-all-orphaned,
#modal-options .options-switch input+span {
    opacity: 0.6;
}

#modal-options .options-switch label:hover span,
#modal-options #options-orphans .remove-all-orphaned:hover,
#modal-options .options-switch a:hover {
    opacity: 1;
}

#modal-options .options-switch input:checked+span {
    opacity: 1 !important;
}

#modal-options .options-switch input {
    width: 14px;
    height: 14px;
    display: block;
    float: left;
    margin-top: 3px;
    margin-right: 4px;
}
/* ... */

